# smoothness-based-search

./: .gitignore  README.md  exp_bohb_tpe.py  exp_budget.py  exp_config.py  exp_explore.py  exp_ings.py  exp_ings_improved.py  exp_kappa_sweep.py  exp_opus.py  exp_smoothie_trees.py  exp_smoothness_correlation.py  exp_wide.py  interpolation.py  main.py  pyproject.toml  random_choice.py  smoothness.py  surface_plots.py  visualize_loss.py
reports/: exp1_raw.json  exp1_smoothie_trees.html  exp2_raw.json  exp2_smoothness_correlation.html  exp3_bohb_tpe.html  exp3_raw.json  exp4_ings.html  exp4_raw.json  exp5_ings_improved.html  exp5_raw.json  index.html  summary.html
reports_opus/: index.html
reports_opus/config/: exp10_raw.json  exp10_wide.html  exp11_budget.html  exp11_raw.json  exp9_config_opt.html  exp9_kappa_raw.json  exp9_kappa_sweep.html  exp9_raw.json  exp9c_explore.html  exp_explore_raw.json  index.html
reports_opus/process/: exp6_fair_comparison.html  exp7_smas.html  exp8_screen.html  exp_opus_raw.json  index.html
src/: config_opt.py  data.py  experiment.py  matplotlib.py  methods.py  smoothness_trees.py  util.py
